--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" href="img/notepad-apple-icon.png">
   <link rel="mask-icon" href="img/icon-mask.svg" color="black">
   <!-- for Facebook -->
-  <meta property="og:title" content="Notepad - Offline capable" />
+  <meta property="og:title" content="Geo - Offline capable" />
   <meta property="og:type" content="appliction" />
   
   <meta property="og:description"
