--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
   <meta name="description"
     content="An offline capable notepad powered by ServiceWorker. It's quick, distraction-free, dark mode enabled, mobile compatible(Android, iOS) and minimalist in nature.">
   <meta name="keywords" content="note,offline,mobile,web,notepad,android,ios,desktop" />
-  <meta name="author" content="Amit Merchant">
-  <meta name="application-name" content="Notepad" />
+  
+  <meta name="application-name" content="geopad" />
   
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link rel="icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
-  <link rel="apple-touch-icon" href="img/notepad-apple-icon.png">
-  <link rel="mask-icon" href="img/icon-mask.svg" color="black">
+  
+  
   <!-- for Facebook -->
   <meta property="og:title" content="Geo - Offline capable" />
   <meta property="og:type" content="appliction" />
