--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#4d4d4d">
   <meta name="description"
-    content="An offline capable notepad powered by ServiceWorker. It's quick, distraction-free, dark mode enabled, mobile compatible(Android, iOS) and minimalist in nature.">
+    content="An offline capable notepad. It's quick, distraction-free, dark mode enabled, mobile compatible(Android, iOS) and minimalist in nature.">
   <meta name="keywords" content="note,offline,mobile,web,notepad,android,ios,desktop" />
   
   <meta name="application-name" content="geopad" />
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
           </button>
         </span>
-        <span><a class="navbar-brand app-heading" href="#">Notepad</a></span>
+        <span><a class="navbar-brand app-heading" href="#">Geopad</a></span>
         <span class="icon-container">
           <span>
             <a id="clearNotes" class="navbar-brand trash-icon" title="Delete Notes">
@@ -111,7 +111,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title custom-modal-title">Notepad — Offline capable</h4>
+          <h4 class="modal-title custom-modal-title">Geopad — Offline capable</h4>
           <span class="install-app-btn-container">
             <a id="installApp" class="install-app-btn" href="javascript:void(0);">Install</a>
           </span>
